k8s/api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bipa-challenge-api-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: bipa-challenge-api-deployment
  template:
    metadata:
      labels:
        app: bipa-challenge-api-deployment
    spec:
      containers:
        - name: bipa-challenge-api
          image: registry.gitlab.com/talis-fb/lightning-nodes-api/lightning-nodes:api-only
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          resources:
            requests:
              memory: "32Mi"
              cpu: "250m"
            limits:
              memory: "64Mi"
              cpu: "500m"
          livenessProbe:
            httpGet:
              path: /
              port: 8080
            periodSeconds: 5
            initialDelaySeconds: 2
            timeoutSeconds: 5
          readinessProbe:
            httpGet:
              path: /ready
              port: 8080
            periodSeconds: 5
            initialDelaySeconds: 2
            timeoutSeconds: 5
---
apiVersion: v1
kind: Service
metadata:
  name: bipa-challenge-api-service
spec:
  type: ClusterIP
  selector:
    app: bipa-challenge-api-deployment
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
      name: api-port
